<resources>
    <string name="app_name">Movies</string>
    <string name="error">Error</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="movie_list_is_empty">List is empty.</string>
    <string name="not_found">Not Found</string>
    <string name="not_authorized">Unauthorized</string>
    <string name="movie_banner">Movie Banner</string>
    <string name="movie_background">Movie Background</string>
    <string name="releasing_on">Releasing On</string>
    <string name="review">Review</string>
    <string name="users">Users</string>
    <string name="movie_name">Movie Name</string>
    <string name="language">Language</string>
    <string name="overview">Overview:</string>
    <string name="back">Back</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="tap_to_retry">Tap to Retry</string>
    <string name="no_internet_connection">No Internet Connection.</string>
    <string name="favorite">Favorite</string>
    <string name="mark_as_favorite">Mark as favorite</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="trailers">Trailers</string>
    <string name="author">Author</string>
    <string name="reviews">Reviews</string>
    <string name="content">Content</string>
    <string name="url">www.goole.com</string>
    <string name="no_review_found">No review found.</string>
    <string name="watch_this">Watch this</string>
    <string name="amazing_trailer">This trailer is amazing.</string>
    <string name="choose_one">choose one</string>
    <string name="selected_type">selectedType</string>
    <string name="scroll_position">scrollPosition</string>
</resources>
