<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/pbLoadingThumbnail"
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.GaryAccent" />

        <ImageView
            android:foreground="@drawable/gradient_shade"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/ivThumbnail"
            android:contentDescription="@string/movie_banner"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitXY" />

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:layout_below="@+id/ivThumbnail"
            android:id="@+id/tvName"
            android:text="@string/movie_name"
            android:textSize="12sp"
            android:textColor="@color/colorIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvMovieLang"
            android:layout_below="@+id/tvName"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:text="@string/language"
            android:textSize="10sp"
            android:textColor="@color/colorDivider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </RelativeLayout>

</layout>