<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        tools:context=".songs_list.view.SongsActivity">

        <ProgressBar
            android:theme="@style/AppTheme.GaryAccent"
            android:id="@+id/pbLoading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <RelativeLayout
            android:id="@+id/rlError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone">

            <ImageView
                android:id="@+id/ivError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/error"
                 />

            <TextView
                android:id="@+id/tvError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivError"
                android:layout_marginTop="10dp"
                android:text="@string/something_went_wrong" />

            <TextView
                android:id="@+id/tvEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivError"
                android:layout_marginTop="10dp"
                android:text="@string/movie_list_is_empty"
                android:visibility="gone" />

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvMovies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"/>

    </RelativeLayout>
</layout>